applications/dependent-application-1/metadata/8080_service_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'dependent-application-1'
  namespace: maarten-kafka
  labels:
    app: 'dependent-application-1'
    app.kubernetes.io/component: 'dependent-application-1'
    app.kubernetes.io/instance: 'dependent-application-1'
    app.kubernetes.io/name: 'dependent-application-1'
    app.kubernetes.io/part-of: 'dependent-application-1'
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: 'dependent-application-1'
    deployment: 'dependent-application-1'
  type: ClusterIP
